--- a/main.css
+++ b/main.css
@@ -226,8 +226,10 @@ div{
 #action-buttons {
 	display: none;
 	width: 512px;
+	height: 78px;
 	flex-direction: row;
 	justify-content: space-evenly;
+	align-items: center;
 }
 
 #speak-animation {
@@ -260,6 +262,10 @@ div{
 		border: 5px solid #a37870;
 	}
 
+	& .button:hover {
+		background-color: #362121;
+	}
+
 	& p {
 		-webkit-text-fill-color: #efe8d3;
 	}
@@ -269,10 +275,6 @@ div{
 		height: -webkit-fill-available;
 		flex-direction: column;
 		justify-content: center;
-	}
-
-	& .button:hover {
-		background-color: #362121;
 	}
 }
 
