--- a/main.css
+++ b/main.css
@@ -75,6 +75,10 @@ div{
 	}
 }
 
+.unstyled-button {
+	cursor: url(./img/cursor1.png) 20 20, pointer;
+}
+
 .animation-action {
 	display: flex;
 	padding: 0px;
@@ -132,6 +136,8 @@ div{
 
 .has-custom-background {
 	padding: 0px 8px;
+	min-width: 96px;
+	min-height: 96px;
 	image-rendering: pixelated;
 	background-origin: content-box;
 	background-clip: content-box;
@@ -275,6 +281,56 @@ div{
 		height: -webkit-fill-available;
 		flex-direction: column;
 		justify-content: center;
+	}
+}
+
+#items {
+	display: flex;
+	flex-direction: column;
+	padding: 8px 0px;
+	gap: 8px;
+	width: calc(var(--screen-width) - var(--inventory-ui-width));
+	height: calc(var(--screen-height) - 8px * 2);
+
+	& div {
+		height: -webkit-fill-available;
+
+		& div {
+			padding: 24px;
+		}
+	}
+
+	#items-info {
+		display: flex;
+		height: 160px;
+
+		& img {
+			align-self: center;
+			width: 64px;
+			height: 64px;
+			padding: 0px 5px 0px 24px;
+		}
+		
+		& div {
+			display: flex;
+			flex-direction: column;
+			gap: 4px;
+			padding: 24px 24px 24px 0px;
+			height: auto;
+		}
+
+		& p {
+		    word-break: break-word;
+		    font-size: 8px;
+		    line-height: 4px;
+		    -webkit-text-fill-color: #362121;
+		}
+	}
+}
+
+#item-bag {
+	& img {
+		width: 64px;
 	}
 }
 
