--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@
 }
 
 @font-face {
-	font-family: PressStart2P;
-	src: url(./PressStart2P-Regular.ttf) format("opentype");
+	font-family: Ohrenstead;
+	src: url(./Ohrenstead.ttf) format("opentype");
 	font-display: block;
 }
 
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-	font-family: 'PressStart2P', cursive;
+	font-family: 'Ohrenstead', cursive;
 	margin: 0px;
 	overflow-y: hidden;
 	background-color: #4b2121;
@@ -33,11 +33,12 @@ img {
 }
 
 p {
-	padding: 3px 3px;
+	padding: 3px;
 	margin: 0px;
-	font-size: 10px;
+	-webkit-font-smoothing: subpixel-antialiased;
+	font-size: 32px;
 	overflow-wrap: break-word;
-	line-height: 13px;
+	line-height: 20px;
 }
 
 div{
@@ -69,7 +70,7 @@ div{
 
 	& p {
 		padding: 0px;
-		font-size: 16px;
+		font-size: 32px;
 		line-height: 16px;
 		transform: translateY(1px);
 		-webkit-text-fill-color: #331212;
@@ -114,6 +115,10 @@ div{
 	& p {
 		word-break: break-word;
 		-webkit-text-fill-color: #362121;
+	}
+
+	& #player-name {
+		-webkit-text-fill-color: #724046;
 	}
 }
 
@@ -321,16 +326,21 @@ div{
 		& div {
 			display: flex;
 			flex-direction: column;
-			gap: 4px;
 			padding: 24px 24px 24px 0px;
 			height: auto;
 		}
 
 		& p {
-		    word-break: break-word;
-		    font-size: 8px;
-		    line-height: 4px;
-		    -webkit-text-fill-color: #362121;
+			word-break: break-word;
+			padding: 8px 4px;
+			font-size: 32px;
+			line-height: 4px;
+			-webkit-text-fill-color: #362121;
+		}
+
+		& #item-name {
+			-webkit-text-fill-color: #724046;
+
 		}
 	}
 }
@@ -376,8 +386,12 @@ div{
 				clip-path: content-box;
 				padding: 24px 24px 28px 0px;
 
+				& #npc-name {
+					-webkit-text-fill-color: #724046;
+				}
+
 				& #npc-bio {
-					padding: 2px 3px 22px;
+					padding: 2px 3px 32px;
 					overflow-y: scroll;
 					height: -webkit-fill-available;
 				}
@@ -390,10 +404,10 @@ div{
 
 		.button {
 			width: 128px;
-			height: 16px;
+			height: 24px;
 
 			& p {
-				font-size: 12px;
+				font-size: 32px;
 			}
 		}
 	}
