Style: QoL improvements
-The sprite animation start frame can be configured for further customization. \n-Overflowing a text box no longer hides the text.

--- a/main.css
+++ b/main.css
@@ -247,7 +247,17 @@ div{
 #speak-animation {
 	display: none;
 	height: 64px;
-	width: 736px;	
+	width: 736px;
+	--scrollbar-color: #331212;
+
+	& ::-webkit-scrollbar-thumb {
+		background-color: var(--scrollbar-color);
+	}
+
+	& :last-child {
+		overflow-y: scroll;
+		clip-path: content-box;
+	}
 }
 
 #inventory {
@@ -326,21 +336,20 @@ div{
 		& div {
 			display: flex;
 			flex-direction: column;
+			overflow-y: scroll;
+			clip-path: content-box;
 			padding: 24px 24px 24px 0px;
 			height: auto;
 		}
 
 		& p {
 			word-break: break-word;
-			padding: 8px 4px;
 			font-size: 32px;
-			line-height: 4px;
 			-webkit-text-fill-color: #362121;
 		}
 
 		& #item-name {
 			-webkit-text-fill-color: #724046;
-
 		}
 	}
 }
@@ -415,7 +424,7 @@ div{
 
 @keyframes idle {
 	0% {
-		object-position: var(--step-width) 0;
+		object-position: var(--step-start) 0;
 	}
 	100% {
 		object-position: var(--sprite-width) 0;
@@ -430,14 +439,11 @@ div{
 	width: 10px;
 	height: 8px;
 }
+
 ::-webkit-scrollbar-track {
-	background: rgba(0, 0, 0, 0);
+	background-color: rgba(0, 0, 0, 0);
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #ac3232;
-	border-radius: 4px;
-}
-::-webkit-scrollbar-thumb:hover {
-	background: #ac3232;
+	background-color: #331212;
 }
