--- a/main.css
+++ b/main.css
@@ -81,6 +81,15 @@ div{
 	background-color: #362121;
 }
 
+		
+.alt-hover:hover {
+	background-color: #724046;
+
+	& p {
+		-webkit-text-fill-color: #e3b898;
+	}
+}
+
 .unstyled-button {
 	cursor: url(./img/cursor1.png) 20 20, pointer;
 }
@@ -182,16 +191,6 @@ div{
 		right,
 		bottom,
 		center;
-}
-
-#main-menu {
-	& .button:hover {
-		background-color: #724046;
-
-		& p {
-			-webkit-text-fill-color: #e3b898;
-		}
-	}
 }
 
 #game {
